# klartraum

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CNAME  LICENSE  README.md  index.html
examples/: CMakeLists.txt  README.md  gaussian_splatting_example.cpp  onnx_example.cpp
include/klartraum/: backend_config.hpp  backend_vulkan.hpp  camera.hpp  draw_basics.hpp  draw_component.hpp  drawgraph.hpp  events.hpp  glfw_frontend.hpp  interface_camera.hpp  interface_camera_orbit.hpp  klartraum_core.hpp  onnx_network.hpp  vulkan_buffer.hpp  vulkan_context.hpp  vulkan_gaussian_splatting.hpp  vulkan_gaussian_splatting_types.hpp  vulkan_helpers.hpp  vulkan_kernel.hpp  vulkan_operator.hpp  vulkan_tensor.hpp
include/klartraum/computegraph/: bufferelement.hpp  buffertransformation.hpp  computegraph.hpp  computegraphelement.hpp  computegraphgroup.hpp  generalcomputation.hpp  imageviewsrc.hpp  rendergraphelement.hpp  renderpass.hpp  tensorelement.hpp  uniformbufferobject.hpp
include/klartraum/drawgraph/: bufferelement.hpp  buffertransformation.hpp  drawgraph.hpp  drawgraphelement.hpp  drawgraphgroup.hpp  framebuffersrc.hpp  generalcomputation.hpp  imageviewsrc.hpp  rendergraphelement.hpp  renderpass.hpp  uniformbufferobject.hpp
shaders/: gaussian_splatting.comp  gaussian_splatting_bin_bounds.comp  gaussian_splatting_binned_splatting.comp  gaussian_splatting_binning.comp  gaussian_splatting_projection.comp  gaussian_splatting_radix_sort.comp  gaussian_splatting_radix_sort0.comp  gaussian_splatting_radix_sort1.comp  gaussian_splatting_radix_sort2.comp  gaussian_splatting_radix_sort3.comp  gaussian_splatting_radix_sort_hist_prefix_sum.comp  gaussian_splatting_radix_sort_hist_scatter.comp  gaussian_splatting_radix_sort_histogram.comp  gaussian_splatting_radix_sort_include.glsl  gaussian_splatting_types.glsl  operator_add.comp  operator_double.comp  operator_matmul_M4V4.comp  operator_multiply_scalar.comp
shaders/gsplat/: gsplat_bin_bounds.comp  gsplat_binned_splatting.comp  gsplat_binning.comp  gsplat_projection.comp  gsplat_radix_sort_hist_prefix_sum.comp  gsplat_radix_sort_hist_scatter.comp  gsplat_radix_sort_histogram.comp  gsplat_radix_sort_include.glsl  gsplat_types.glsl
src/: backend_vulkan.cpp  camera.cpp  draw_basics.cpp  glfw_frontend.cpp  interface_camera_orbit.cpp  klartraum_core.cpp  klartraum_engine.cpp  main.cpp  onnx_network.cpp  vulkan_context.cpp  vulkan_gaussian_splatting.cpp  vulkan_helpers.cpp  vulkan_kernel.cpp
tests/: test_buffertransformation.cpp  test_computegraph.cpp  test_drawgraph.cpp  test_gaussian_splatting.cpp  test_main.cpp  test_onnx_network.cpp  test_tensorelement.cpp  test_vulkan_buffers.cpp  test_vulkan_operator.cpp
